[gd_scene load_steps=14 format=2]

[ext_resource path="res://GUI/Scenes/PlaceholderUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/Dialog.tres" type="Theme" id=2]
[ext_resource path="res://GUI/Portraits/Cool.tres" type="SpriteFrames" id=3]
[ext_resource path="res://GUI/Scripts/DownBoxScript.gd" type="Script" id=4]
[ext_resource path="res://GUI/TestBox.png" type="Texture" id=5]
[ext_resource path="res://GUI/TextBoxEffect.ogg" type="AudioStream" id=6]
[ext_resource path="res://GUI/NextIndicator.png" type="Texture" id=7]
[ext_resource path="res://GUI/Next.tres" type="Animation" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Reset"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 246.819, 49.8921 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 150 ), Vector2( 0, 60 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 150 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DownDialogBox/DownPortraitMargin:rect_position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13, 7 ), Vector2( 14, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DownDialogBox/NinePatchRect2:rect_position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, -24 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DownDialogBox/DownPortraitMargin:rect_position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 255, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DownDialogBox/NinePatchRect2:rect_position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 256, -24 ) ]
}

[node name="DownBox" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 60.0
margin_right = 160.0
margin_bottom = 240.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownDialogBox" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.0
margin_bottom = 30.0
texture = ExtResource( 5 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Tween" type="Tween" parent="DownDialogBox"]

[node name="DownTextMargin" type="MarginContainer" parent="DownDialogBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -52.0
margin_right = 95.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownText" type="RichTextLabel" parent="DownDialogBox/DownTextMargin"]
margin_right = 190.0
margin_bottom = 48.0
rect_clip_content = false
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
tab_size = 3
fit_content_height = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" parent="DownDialogBox" instance=ExtResource( 1 )]
margin_left = -146.0
margin_top = -84.0
margin_right = -98.0
margin_bottom = -52.0
texture = ExtResource( 5 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="DownNameMargin" type="VBoxContainer" parent="DownDialogBox/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.9999
margin_top = -24.305
margin_right = 21.0001
margin_bottom = -6.30501
size_flags_horizontal = 0
size_flags_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownName" type="Label" parent="DownDialogBox/NinePatchRect2/DownNameMargin"]
margin_right = 42.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownPortraitMargin" type="MarginContainer" parent="DownDialogBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -53.0
margin_right = -99.0
margin_bottom = -5.00002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownPortraitTexture" type="AnimatedSprite" parent="DownDialogBox/DownPortraitMargin"]
position = Vector2( 25, 25 )
frames = ExtResource( 3 )

[node name="NextIndicator" type="Sprite" parent="DownDialogBox"]
visible = false
position = Vector2( 246.819, 49.8921 )
texture = ExtResource( 7 )

[node name="IndicatorAnimation" type="AnimationPlayer" parent="DownDialogBox/NextIndicator"]
anims/Next = ExtResource( 8 )
anims/Reset = SubResource( 1 )

[node name="DownAnimation" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 2 )
anims/Disappear = SubResource( 3 )
anims/LeftPortrait = SubResource( 4 )
anims/RightPortrait = SubResource( 5 )

[node name="BloopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "GUI SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="tween_completed" from="DownDialogBox/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="DownDialogBox/Tween" to="." method="_on_Tween_tween_started"]
[connection signal="animation_finished" from="DownAnimation" to="." method="_on_DownAnimation_animation_finished"]
[connection signal="animation_started" from="DownAnimation" to="." method="_on_DownAnimation_animation_started"]
